# opencode-native-memory

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  buf.yaml  build.rs  package.json  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-npm.yml
.opencode/: opencode.jsonc
.opencode/.opencode-manager/: state.json
.opencode/agents/researcher/: research-academic.md  research-community.md  research.md  (+3 more)
notices/: ZVEC_NOTICE
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
opencode-memory/: package.json
opencode-memory/src/: contracts.ts  index.ts  instructions.test.ts  instructions.ts  plugin-options.test.ts  plugin.ts  policy.test.ts  policy.ts  protocol.test.ts  protocol.ts  server.test.ts  server.ts  session-context.test.ts  session-context.ts  shared-markdown.test.ts  shared-markdown.ts  sidecar-client.test.ts  sidecar-client.ts  validation.test.ts  validation.ts
rules/: flow.md
schema/: memory.proto
scripts/: check-versions.ts  stage-native.ts  test-protocol-e2e.ts  verify-native-package.ts  verify-package.ts
src/: capture.rs  config.rs  contract.rs  embedding.rs  lib.rs  lifecycle.rs  main.rs  rpc.rs  taxonomy.rs  validation.rs
src/engine/: mod.rs  retrieval.rs
src/storage/: mod.rs  state.rs  zvec.rs
tests/: e2e.rs
tests/opencode-memory-demo/: .gitignore  .ignore  AGENTS.md  README.md  memory-plugin.ts  package.json  tsconfig.json
(+180 files in other folders)
