[package]
name = "opencode-memory"
version = "0.3.0"
edition = "2024"
license = "MIT"
rust-version = "1.97"
description = "Native zvec-backed project memory sidecar for OpenCode plugins"
repository = "https://github.com/nguyenthdat/opencode-native-memory"
readme = "README.md"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
cuda-no-vmm = ["llama-cpp-2/cuda-no-vmm"]
metal = ["llama-cpp-2/metal"]
openmp = ["llama-cpp-2/openmp"]
static-openmp = ["llama-cpp-2/static-openmp"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
anyhow = "1.0"
fs2 = "0.4"
hex = "0.4"
hf-hub = { version = "=1.0.0", features = ["blocking"] }
llama-cpp-2 = { version = "=0.1.152", default-features = false }
prost = "=0.14.4"
self_cell = "=1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
zvec-rust = "=0.6.0"

[build-dependencies]
prost-build = "=0.14.4"

[dev-dependencies]
tempfile = "3"

[lints]
rust.unsafe_code = "forbid"
clippy.correctness = "deny"
clippy.suspicious = "warn"
clippy.complexity = "warn"
clippy.perf = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
